syntax = "proto3";
option go_package = "chatgpt-service/services/chatgpt-keywords/proto";
package chatgpt_keywords;

message FindAllReq {
    string text = 1;
}

message FindAllRes{
    repeated string words = 1;
}

service ChatGPTKeywords {
    rpc FindAll(FindAllReq) returns (FindAllRes) {}
}